Started the settings feature and fixed some layout issues.

--- a/prospera/src/Components/Dashboard/Dashboard.css
+++ b/prospera/src/Components/Dashboard/Dashboard.css
@@ -1,4 +1,7 @@
 .dashboardBody {
-    margin: 75px 0 0 0;
+    margin: 55px 0 0 0;
     padding: 0 30px 30px 30px;
+}
+.footerSpace{
+    height: 238.44px;
 }
