--- a/prospera/src/Components/LoginPage/LoginPage.css
+++ b/prospera/src/Components/LoginPage/LoginPage.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     color: black;
-    margin: 6rem 0 0 0;
+    margin: 1rem 0 2rem 0;
 }
 
 .loginBox {
@@ -134,4 +134,8 @@
     border-color: #9b62f8;
     background: #6303FF;
     color: #fff;
+}
+
+.headerSpace {
+    height: 81px;
 }
